--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Sat Oct 11 22:10:18 2003  Tim Janik  <timj@gtk.org>
+
+	* bsemain.c: bind gettext domain "bse" to BST_PATH_LOCALE.
+
 Fri Oct 10 16:47:53 2003  Tim Janik  <timj@gtk.org>
 
 	* icons/inport.c:
