--- a/po-bse/de.po
+++ b/po-bse/de.po
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: BSE vUNSPECIFIED\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2003-10-11 21:32+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=iso_8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: bse/bsebiquadfilter.c:131
