--- a/NEWS
+++ b/NEWS
@@ -16,7 +16,9 @@ Overview of Changes in BEAST/BSE 0.5.5:
 * Added prototype support to IDL compiler [Stefan Westerfeld]
 * Work around PTH poll() bug on NetBSD [Ben Collver, Tim Janik]
 * Support NetBSD sound device names [Ben Collver]
-* Added i18n infrastrukture [Christian Neumair]
+* Added i18n infrastrukture for BEAST and BSE [Christian Neumair, Tim Janik]
+* Made search paths for various resources user configurable
+* First German translation efforts
 * Lots of bug fixes
 
 Overview of Changes in BEAST/BSE 0.5.4:
