--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-16  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Added Serbian translation.
+
 2003-10-15  Christian Rose  <menthos@menthos.com>
 
 	* .cvsignore: Added more entries.
