--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2003-10-16  Christian Rose  <menthos@menthos.com>
+
+	* POTFILES.in: Added missing files and comment.
+	* POTFILES.skip: Added.
+	* sv.po: Updated Swedish translation.
+
 2003-10-16  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Added Serbian translation.
