updated NEWS, fixed CHangeLog encoding
svn path=/trunk/; revision=1385

--- a/NEWS
+++ b/NEWS
@@ -19,6 +19,7 @@ Overview of Changes in BEAST/BSE 0.5.5:
 * Added i18n infrastrukture for BEAST and BSE [Christian Neumair, Tim Janik]
 * Made search paths for various resources user configurable
 * Added Swedish translation [Christian Rose]
+* Added Serbian translation [Danilo Segan]
 * First German translation efforts
 * Lots of bug fixes
 
