--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2003-10-15  Danilo Šegan  <dsegan@gmx.net>
+2003-10-15  Danilo Segan  <dsegan@gmx.net>
 
 	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.
 
