--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,10 @@
 2003-10-16  Christian Rose  <menthos@menthos.com>
 
+	* POTFILES.in: Moved the last added files...
+	* POTFILES.skip: ...to this file.
+
+2003-10-16  Christian Rose  <menthos@menthos.com>
+
 	* POTFILES.in: Added missing files and comment.
 	* POTFILES.skip: Added.
 	* sv.po: Updated Swedish translation.
