--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Oct 15 21:12:56 2003  Alper Ersoy  <dirt@gtk.org>
+
+	* docs/generated/css/default.css: use normal width serif fonts for var
+	element.
+
 2003-10-15  Danilo Segan  <dsegan@gmx.net>
 
 	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.
