--- a/TODO
+++ b/TODO
@@ -103,6 +103,15 @@ DOCS:
 - what kind of texi macros should be used to markup manual page contents?
   could WRITING.3 have a set of default macros showing this? [alper]
 
+Stefan Gui TODOs (priorities: 9=high, 0=low):
+5 - implement selection and copy and paste in the song view
+8 - closing the BEAST window should ask (close/save/abort) if modified changes are
+6 - file open on an unmodified project should not open a new project window but
+    reuse the existing one
+3 - make appropriate borders for notes in piano roll view (two consecutive same pitch notes
+    should be distinguishable)
+7 - file->save as should change the file name in the title bar
+
 TODO:
 - virtual MIDI keyboard
 - delay class destruction and plugin unloading through async handlers (slight timeout)
