--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Fri Oct 17 18:20:41 2003  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstpartdialog.c (part_dialog_update_tool): allow button2
+	moves for vselect (like we do for select already).
+
+	* beast-gtk/bstpartdialog.c (popup_entries): more i18n markup.
+
 Wed Oct 15 21:12:56 2003  Alper Ersoy  <dirt@gtk.org>
 
 	* docs/generated/css/default.css: use normal width serif fonts for var
