--- a/po-bse/sr@Latn.po
+++ b/po-bse/sr@Latn.po
@@ -8,13 +8,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: bse\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-10-17 21:42+0200\n"
 "PO-Revision-Date: 2003-10-15 23:36+0200\n"
 "Last-Translator: Danilo Šegan <danilo@prevod.org>\n"
 "Language-Team: Serbian (sr) <serbiangnome-listaL@nongnu.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-
 
 #: bse/bsebiquadfilter.c:131
 msgid "Filter"
@@ -56,7 +57,9 @@ msgstr "Vrsta normalizacije"
 #: bse/bsebiquadfilter.c:165
 msgid ""
 "The filter gain normalization type (supported only by highpass and lowpass)"
-msgstr "Vrsta normalizacije pojačavanja filtera (podržano jedino u visokom i niskom prolazu)"
+msgstr ""
+"Vrsta normalizacije pojačavanja filtera (podržano jedino u visokom i niskom "
+"prolazu)"
 
 #: bse/bsebiquadfilter.c:170 bse/bsebiquadfilter.c:176
 #: bse/bsebiquadfilter.c:182 bse/bsebiquadfilter.c:188
