--- a/po-bse/sv.po
+++ b/po-bse/sv.po
@@ -2,12 +2,13 @@
 # Copyright (C) 2003 Free Software Foundation, Inc.
 # Christian Rose <menthos@menthos.com>, 2003.
 #
-# $Id: sv.po,v 1.1 2003/10/15 19:19:39 menthos Exp $
+# $Id: sv.po,v 1.2 2003/10/17 19:44:23 timj Exp $
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: po-bse\n"
-"POT-Creation-Date: 2003-10-15 21:15+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-10-17 21:42+0200\n"
 "PO-Revision-Date: 2003-10-15 21:17+0200\n"
 "Last-Translator: Christian Rose <menthos@menthos.com>\n"
 "Language-Team: Swedish <sv@li.org>\n"
